# fix-parser

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  release-please-config.json  vcpkg.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  prepare-npppluginlist.yml  release-please.yml  security.yml
cmake/: FetchDictionaries.cmake  FetchNpp.cmake  FetchNppSdk.cmake  GenSampleLog.cmake  LocalDevEnv.cmake
packaging/npppluginlist/: README.md  entry.x64.json  entry.x86.json  pl.schema
resources/dictionaries/: NOTICE.txt
scripts/: package.ps1  prepare-npppluginlist.py  setup-dev-env.ps1  submit-npppluginlist.py  validate-npppluginlist.py
src/core/: DelimiterNormalizer.cpp  DelimiterNormalizer.h  Dictionary.cpp  Dictionary.h  DictionaryCache.cpp  DictionaryCache.h  DictionarySelector.cpp  DictionarySelector.h  FixParser.cpp  FixParser.h  FixTokenizer.cpp  FixTokenizer.h  MessageFramer.cpp  MessageFramer.h  ParseResult.h  PrettyPrinter.cpp  PrettyPrinter.h
src/fuzz/: fuzz_parser.cpp
src/plugin/: PluginDefinition.cpp  PluginDefinition.h  dllmain.cpp  version.h.in  version.rc.in
src/ui/: FieldRenderer.cpp  FieldRenderer.h  FixPanel.cpp  FixPanel.h  FixPanel.rc  resource.h
test/data/: README.md
test/data/fixsim/: SOURCE.md  fix42.txt  fix44.txt
test/data/fxcm/: SOURCE.md  messages.txt
test/data/messy/: SOURCE.md  messy_log.txt
test/data/onixs/: SOURCE.md  nested_groups.txt
test/data/quickfix/: SOURCE.md
test/unit/: DatasetTests.cpp  DelimiterNormalizerTests.cpp  DictionaryTests.cpp  FixParserTests.cpp  FixTokenizerTests.cpp  MessageFramerTests.cpp  PrettyPrinterTests.cpp
triplets/: x64-windows-static-asan.cmake
